# learn-claude-code-rs

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.zh.md  Cargo.toml  LICENSE  README.md  README.zh.md  _typos.toml  deny.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
s01_agent_loop/: Cargo.toml  s01.en.md  s01.md
s01_agent_loop/src/: main.rs
s02_tool_use/: Cargo.toml  s02.en.md  s02.md
s02_tool_use/src/: lib.rs  main.rs
s02_tool_use/src/tool/: bash.rs  edit_file.rs  mod.rs  read_file.rs  write_file.rs
s03_todo_write/: Cargo.toml  s3.en.md  s3.md
s03_todo_write/src/: main.rs
s03_todo_write/src/tool/: mod.rs  todo.rs  write_file.rs
s04_subagent/: Cargo.toml  s4.en.md  s4.md
s04_subagent/src/: lib.rs  main.rs
s04_subagent/src/tool/: mod.rs  sub_agent.rs
s05_skill_loading/: Cargo.toml  s05.en.md  s05.md
s05_skill_loading/src/: lib.rs  main.rs  skill.rs
s05_skill_loading/src/tool/: load_skill.rs  mod.rs  write_file.rs
s06_context_compact/: Cargo.toml  s06.en.md  s06.md
s06_context_compact/src/: compact.rs  lib.rs  main.rs
s06_context_compact/src/tool/: compact.rs  mod.rs
s07_permission_system/: Cargo.toml  s07.en.md  s07.md
s07_permission_system/src/: lib.rs  main.rs  permission.rs
s08_hook_system/: Cargo.toml  s08.en.md  s08.md
s08_hook_system/src/: hook.rs  lib.rs  main.rs  utils.rs
s08_hook_system/src/tool/: mod.rs
s09_memory_system/: Cargo.toml  s09.en.md  s09.md
s09_memory_system/src/: lib.rs  main.rs  memory.rs
s09_memory_system/src/tool/: mod.rs
s10_system_prompt/: Cargo.toml  s10.en.md  s10.md
s10_system_prompt/src/: lib.rs  main.rs  prompt.rs
s10_system_prompt/src/tool/: memory.rs  mod.rs
s11_error_recovery/: Cargo.toml  s11.en.md  s11.md
s11_error_recovery/src/: lib.rs  main.rs
s11_error_recovery/src/tool/: bash.rs  edit_file.rs  mod.rs
s12_task_system/: Cargo.toml  s12.en.md  s12.md
s12_task_system/src/: lib.rs  main.rs
s12_task_system/src/tool/: mod.rs
s13_background_tasks/: Cargo.toml  s13.en.md  s13.md
s13_background_tasks/src/: background.rs  lib.rs  main.rs
s13_background_tasks/src/tool/: background_run.rs  check_background.rs  mod.rs
s14_cron_scheduler/: Cargo.toml  cron_rs_explained.md  s14.en.md  s14.md
s14_cron_scheduler/src/: cron.rs  lib.rs  main.rs
s14_cron_scheduler/src/tool/: cron_create.rs  cron_delete.rs  cron_list.rs  mod.rs
s15_agent_teams/: Cargo.toml  s15.en.md  s15.md
s15_agent_teams/src/: lib.rs  main.rs  team.rs
s15_agent_teams/src/team/: message.rs  mod.rs  storage.rs  teammate.rs
s15_agent_teams/src/tool/: broadcast.rs  list_teammates.rs  mod.rs  read_file.rs  read_inbox.rs  send_message.rs
s16_team_protocols/: Cargo.toml  s16.en.md  s16.md
s16_team_protocols/src/: lib.rs  main.rs
s16_team_protocols/src/team/: message.rs  mod.rs  requests.rs  teammate.rs
s16_team_protocols/src/tool/: mod.rs  plan_approval.rs  read_inbox.rs  send_message.rs  shutdown_response.rs  spawn_teammate.rs
s17_autonomous_agents/: Cargo.toml  s17.en.md  s17.md
s17_autonomous_agents/src/: lib.rs  main.rs  task.rs  team.rs
s17_autonomous_agents/src/team/: cleanup.rs  mod.rs  requests.rs  storage.rs  teammate.rs
s17_autonomous_agents/src/tool/: broadcast.rs  idle.rs  mod.rs  shutdown_request.rs  task_claim.rs  task_create.rs  task_list.rs  task_update.rs
s18_worktree_task_isolation/: Cargo.toml  s18.en.md  s18.md
s18_worktree_task_isolation/src/: lib.rs  main.rs  task.rs  worktree.rs
s18_worktree_task_isolation/src/tool/: bash.rs  edit_file.rs  mod.rs  read_file.rs  sub_agent.rs  task_get.rs  worktree.rs  write_file.rs
s19_mcp_plugin/: Cargo.toml  s19.en.md  s19.md
s19_mcp_plugin/src/: lib.rs  main.rs  mcp_client.rs  permission.rs  plugin.rs  router.rs
s20_tool_refactor/: Cargo.toml  s20.en.md  s20.md  tool-router-design.zh.md
s20_tool_refactor/src/: lib.rs  main.rs
s20_tool_refactor/src/tool/: bash.rs  edit_file.rs  load_skill.rs  mod.rs  write_file.rs
s20_tool_refactor_macros/: Cargo.toml
s20_tool_refactor_macros/src/: lib.rs
sfull/: Cargo.toml  sfull.en.md  sfull.md
sfull/src/: background.rs  compact.rs  cron.rs  hook.rs  lib.rs  main.rs  mcp.rs  permission.rs  recovery.rs  store.rs  system_prompt_template.md  task.rs  team.rs  worktree.rs
sfull/src/tool/: background.rs  compact.rs  cron.rs  math.rs  memory.rs  mod.rs  read_file.rs  subagent.rs  task.rs  team.rs  worktree.rs
