[workspace]
members = ["s01_agent_loop"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anthropic-ai-sdk = "0.2.27"
anyhow = "1.0.102"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "rt"] }
