[workspace]
members = ["s01_agent_loop", "s02_tool_use", "s03_todo_write", "s04_subagent", "s05_skill_loading", "s06_context_compact"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anthropic-ai-sdk = "0.2.27"
anyhow = "1.0.102"
async-trait = "0.1.89"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "rt"] }
walkdir = "2.5.0"
