[workspace]
members = [
    "s01_agent_loop",
    "s02_tool_use",
    "s03_todo_write",
    "s04_subagent",
    "s05_skill_loading",
    "s06_context_compact",
    "s07_permission_system",
    "s08_hook_system",
    "s09_memory_system",
    "s10_system_prompt",
    "s11_error_recovery",
    "s12_task_system",
    "s13_background_tasks",
    "s14_cron_scheduler",
    "s15_agent_teams",
    "s16_team_protocols",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anthropic-ai-sdk = "0.2.27"
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = "0.4.44"
cron = "0.16"
derive_builder = "0.20.2"
dotenvy = "0.15.7"
fs4 = "0.13"
inquire = "0.9.4"
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
strum = "0.28.0"
strum_macros = "0.28.0"
tera = "1.20.1"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "rt"] }
walkdir = "2.5.0"
wildmatch = "2.5.0"
