[package]
name = "s01_agent_loop"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[dependencies]
anthropic-ai-sdk = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
inquire = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
