[package]
name = "s03_todo_write"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anthropic-ai-sdk = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = "0.28.0"
strum_macros = "0.28.0"
tokio = { workspace = true }
