[package]
name = "s03_todo_write"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anthropic-ai-sdk = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
inquire = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
