[package]
name = "s10_system_prompt"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anthropic-ai-sdk = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
dotenvy = { workspace = true }
inquire = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tera = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
