[package]
name = "s13_background_tasks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anthropic-ai-sdk = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
inquire = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "sync", "time"] }
wildmatch = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
walkdir = { workspace = true }
