[package]
name = "s16_team_protocols"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anthropic-ai-sdk = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
inquire = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wildmatch = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
