[package]
name = "s19_mcp_plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anthropic-ai-sdk = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
inquire = { workspace = true }
rmcp = { version = "0.17.0", default-features = false, features = ["client", "transport-child-process"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
